--- a/package.json
+++ b/package.json
@@ -9,17 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^10.0.1",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/d3": "^7.4.3",
+    "@types/three": "^0.178.1",
+    "animejs": "^4.0.2",
     "axios": "^1.6.0",
+    "chart.js": "^4.5.0",
     "clsx": "^2.0.0",
+    "d3": "^7.9.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
+    "framer-motion": "^12.23.3",
+    "gsap": "^3.13.0",
+    "highcharts": "^12.3.0",
+    "highcharts-react-official": "^3.2.2",
     "lucide-react": "^0.518.0",
+    "mo-js": "^0.288.2",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-spring": "^10.0.1",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
